<?xml version="1.0"?>
<package format="3">
  <name>ydlidar_sdk</name>
  <version>1.2.19</version>
  <description>YDLIDAR SDK wrapped for ROS 2</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD-2-Clause OR Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>